objects/DSS_Echo_Survey_Question__c.object
<CustomObject>
    <fields>
        <fullName>DSS_Echo_Survey__c</fullName>
        <label>DSS Echo Survey</label>
        <referenceTo>DSS_Echo_Survey__c</referenceTo>
        <relationshipLabel>DSS Echo Survey Questions</relationshipLabel>
        <relationshipName>DSS_Echo_Survey_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Echo_Message_ID__c</fullName>
        <description>Same as in Echo Survey</description>
        <label>Echo Message ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Answer__c</fullName>
        <description>Narrative Answer, not numerical</description>
        <label>Survey Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Metric_Name__c</fullName>
        <description>Will be a Metric Name for each question</description>
        <label>Survey Metric Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DSS Echo Survey Question</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>DSS Echo Survey Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DSS Echo Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>